# qt-qml-font-awesome-material-design-fontello

./: CMakeLists.txt  Main.qml  README.md  main.cpp
